feat : SNS 로그인 및 회원가입 전 처리